@@ -1,3 +1,11 @@
+Wed Apr  2 20:57:15 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c, gc.h (rb_objspace_each_objects_without_setup): 
+	  Add a new (hidden) C-API to iterate objspace snapshot.
+
+	  This API is not safe to call any C-APIs in a given callback
+	  function. Be careful to use this C-API. 
+
 Wed Apr  2 17:43:17 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (ac_cv_func___builtin_setjmp): gcc 4.9 disallows a
